--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <div class="w3-row-padding w3-grayscale">
         <div class="w3-col m4 w3-margin-bottom">
           <div class="w3-light-grey">
-            <img src="/team1.png" alt="John" style="width: 100%" />
+            <img src="team1.png" alt="John" style="width: 100%" />
             <div class="w3-container">
               <h3>John Pemberton</h3>
               <p class="w3-opacity">Inventor</p>
@@ -322,7 +322,7 @@
         </div>
         <div class="w3-col m4 w3-margin-bottom">
           <div class="w3-light-grey">
-            <img src="/team2.png" alt="Jane" style="width: 100%" />
+            <img src="team2.png" alt="Jane" style="width: 100%" />
             <div class="w3-container">
               <h3>Asa Candler</h3>
               <p class="w3-opacity">Designer</p>
