fix: Change broken image source

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="w3-half">
           <div class="image-container">
             <img
-              src="https://boa.vtexassets.com/unsafe/fit-in/568x568/center/middle/https%3A%2F%2Fboa.vtexassets.com%2Farquivos%2Fids%2F556664%2FRefrigerante-Original-Coca-Cola-Lata-350Ml.jpg%3Fv%3D638495659932600000"
+              src="/coca.webp"
               style="width: 50%"
               onclick="onClick(this)"
               alt="Lata de Coca Cola"
