fix: Change broken image source

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="w3-half">
           <div class="image-container">
             <img
-              src="/coca.webp"
+              src="coca.webp"
               style="width: 50%"
               onclick="onClick(this)"
               alt="Lata de Coca Cola"
